<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Laughder</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="action_settings">Settings</string>
    <string name="log_in">Log in</string>
    <string name="profile_name">Profile name</string>
    <string name="profile_text">Trying to make you laugh with 300 characters or less!</string>
    <string name="profile_YTURL_text_view">www.youtube.com/examplelink</string>
    <string name="like_button">Like</string>
    <string name="decline_button">Decline</string>
    <string name="edit_profile_text">You have 500 characters to make someone laugh, so get to it!</string>
    <string name="edit_profile_youtube_url">YouTube URL</string>
    <string name="chat_button">Chat</string>
    <string name="delete_button">Delete</string>
    <string name="register_button_text">Register</string>
    <string name="welcome_text_view">Hello and welcome to Laughder! \n \nPlease enter a Username</string>
    <string name="password_text_view">and a password</string>
    <string name="password_text_view_2">Confirm password</string>
    <string name="save_profile_button_text">Save Profile</string>
    <string name="cont_descr">Visual representation of embedded youtube player</string>
    <string name="phone_number_text_view_2">Phone number</string>
    <string name="edit_profile_phone_number">Phone number (only number)</string>

</resources>
