<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profileTextEditText"
        android:maxLength="500"
        android:hint="@string/edit_profile_text"
        android:padding="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/youTubeEditText"
        android:maxLength="100"
        android:hint="@string/edit_profile_youtube_url"
        android:padding="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_profile_button_text"
        android:id="@+id/saveProfileButton"
        android:padding="10dp"
        android:onClick="onSaveProfileButtonClicked" />
</LinearLayout>