<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:textStyle="bold"
        android:textColor="#009999"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/profileNameTextView"
        android:text="@string/profile_name"
        android:textSize="30sp" />

    <TextView
        android:textStyle="bold"
        android:textColor="#99BBCC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/profileTextTextView"
        android:text="@string/profile_text_missing"
        android:textSize="12sp"
        android:height="200dp"/>

    <TextView
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/profileYTURLTextView"
        android:text="@string/profile_YTURL_text_view"
        android:autoLink="web"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/likeButton"
            android:text="@string/like_button"
            android:textSize="20sp"
            android:onClick="onLikeButtonClicked" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/declineButton"
            android:text="@string/decline_button"
            android:textSize="20sp"
            android:onClick="onDeclineButtonClicked" />

    </LinearLayout>
</LinearLayout>